<resources>
    <string name="app_name">FAQ</string>
    <string name="action_settings">Settings</string>
    <string name="title_diabete">Types de diabète, causes, traitements</string>
    <string name="Button_text">En savoir plus..</string>
    <string name="title_apprivoiser">Apprivoiser la maladie</string>
    <string name="intro_apprivoiser">
        « Comment concilier ma carrière, ma vie de famille et mon diabète ? »
    </string>
    <string name="title_toxic">Alcool, drogue et diabète ?</string>
    <string name="intro_toxic">Une personne diabétique est une personne avant tout, et comme toute
        personne, il se peut qu\'elle ait envie de faire certaines expériences.
        Ici nous parlerons donc des complications liées au diabète.
        Veuillez vous renseigner auprès de votre médecin traitant pour connaitre les conséquences
        que peuvent avoir ces substances sur votre organisme.
    </string>
    <string name="sub_title1_alco_toxic">L\'alcool</string>
    <string name="content_alco_toxic">
        L\'alcool augmente grandement le risque d\'hypoglycémies sévères\n
        L\'alcool peut inhiber la fabrication de glucose par le foie et la transformation des
        réserves de glycogène en glucose. Le taux de glucose diminue donc fortement.\n
        Ce phénomène peut être accentué. Par exemple, si vous dansez (consommation de glucose) et
        que vous oubliez de manger, vous pouvez risquez de faire une crise d\'hypoglycémie sévère.\n\n
        Attention, le Glucagon ne fonctionnera pas pour traiter une hypoglycémie sévère.
    </string>
    <string name="title_conseil_alco_toxic">Conseils pratiques</string>
    <string name="content_conseil_alco_toxic">
        Associez toujours de la nourriture contenant des glucides à la prise d\'alcool\n
        Si vous buvez de l\'alcool en soirée, il est essentiel de faire une glycémie au coucher et
        une collation (risque d\'hypoglycémie jusqu\'à 8 à 12h après avoir consommé de l\'alcool)\n
        Toujours avoir sur soi une source de glucide concentrés\n
        Vérifiez votre glycémie avant pendant et après la consommation\n
        Pour ne pas être déréglé, mettez une alarme le matin pour vous lever à l\'heure habituelle
        afin de prendre votre insuline ainsi que votre petit déjeuner.
    </string>
    <string name="sub_title2_cana_toxic">Le cannabis</string>
    <string name="noeffect_diabete_toxic">Aucun effet direct sur le Diabète..\n</string>
    <string name="content_cana_toxic">
        Le cannabis n\'a aucun effet direct sur le diabète. Les sensations procurées à une personne
        diabétique sont les mêmes que sur une personne non atteinte, les sens et la faculté de
        jugement sont tout autant impactés\n\n
        Cependant, la gestion quotidienne du diabète pourrait devenir problèmatique lors d\'une
        consommation régulière, importante ou répétitive. Les réflexes
        habituels comme la prise de glycémie ou même de les injections d\'insuline pourraient alors
        être oubliés. Ceci peut altérer votre traîtement, et le suivi qu\'effectue votre médecin.
    </string>
    <string name="sub_title3_drug_toxic">Les drogues dures</string>
    <string name="content_drug_toxic">
        Impact sur la faculté de jugement important, acidose diabétique sévère si omission de
        l\'insuline sur plusieurs jours.
    </string>
    <string name="warning_drug_toxic">Attention aux amphétamines ou à l\'ecstasy (MDMA)\n</string>
    <string name="consequence_drug_toxic">
        L\'effet coupe-faim de ces drogues peut fortement influer sur votre gestion du diabète.
        N\'ayant pas de sentiment de faim et étant sous l\'effet de ces substances, il est probable
        que vous oubliez d\'effectuer votre suivi. De ce fait, votre taux de glycémie peut diminuer
        jusqu\'à atteindre un stade critique, menant à des hypoglycémies de gravité différente. \n
        Comme pour l\'alcool, prévoyez toujours une source de glucides en cas de besoin.
    </string>
    <string name="title_finance">Aide financière</string>
    <string name="intro_finance">
        L’arrivée du diabète dans une famille peut bouleverser son organisation. Son impact tant sur
        la vie professionnelle des parents que sur le budget de la famille peut être important.\n\n
        Les familles confrontées au diabète de l’enfant peuvent bénéficier de l’aide de l’État sous
        différentes formes et dans certaines conditions.
    </string>
    <string name="sub_title1_finance">L’allocation journalière de présence parentale (AJPP)</string>
    <string name="content1_finance">
        Après le diagnostic du diabète, si votre médecin juge que votre présence aux côtés de
        l’enfant est indispensable, et que vous décidez d’arrêter ponctuellement votre activité
        professionnelle, certaines aides sont à votre disposition. En effet, la CAF (Caisse
        d’Allocations Familiales) attribue selon certaines conditions une Allocation Journalière de
        Présence Parentale (AJPP ex APP).\n\n
        L’A.J.P.P. s’adresse essentiellement à l’enfant très jeune, qui ne peut pas assurer ses soins.
        Il y a donc une prise en compte de la répercussion familiale du diabète, en particulier dans
        les périodes d’hospitalisation, et le temps d’organiser la garde du jeune enfant avant sa
        première scolarisation.
    </string>
    <string name="sub_title2_finance">Prestation de compensation du handicap PCH)</string>
    <string name="content2_finance">La Prestation de Compensation du Handicap est une aide
        personnalisée destinée à financer les besoins liés à la perte d’autonomie des personnes
        handicapées.\n
        La PCH est délivrée par la Commission des Droits et de l’Autonomie des Personnes Handicapées
        (CDAPH) opérant dans les Maisons Départementales des Personnes Handicapées (MDPH).\n
        La prestation de compensation est une aide financière, versée par le conseil général,
        destinée à financer les besoins liés à la perte d’autonomie des personnes handicapées.
        Son attribution est personnalisée.\n
        Le premier point est bien entendu l’acceptation du terme d’handicap pour son enfant. Cet
        adjectif qui peut sembler anodin pour un individu non concerné est bien souvent douloureux,
        dérangeant, perturbant ou surprenant pour les parents touchés par la maladie.\n
        La demande est adressée à la Maison Départementale des Personnes Handicapées (MDPH) puis
        soumise à la Commission des Droits et de l’Autonomie (CDA).\n
        Vous pouvez vous faire aider par le CCAS de la mairie, l’assistante sociale de l’hôpital ou
        la direction de l’action sociale du conseil général.
    </string>
    <string name="title_react">Savoir réagir face à un malaise</string>
    <string name="title_hyper_react">Hyperglycémie</string>
    <string name="recognize_hyper_react">
        Comment la reconnaître ?\n\t   - Nausées\n\t   - Teint pâle\n\t   - Mauvaise humeur\n\n
        Que faire ? :\n Effectuer une glycémie et ajuster son insuline rapide
    </string>
    <string name="title_hypo_react">Hypoglycémie</string>
    <string name="content_hypo_react">
        Comment la reconnaître ?\n\t   - Tremblements\n\t   - Palpitations\n\t   - Transpiration\n\t
        - Faim\n\t   - Fatigue\n\t   - Confusion..\n\nQue faire ? :\n\t
        Effectuer une glycémie et consommer une collation
    </string>
    <string name="title_glucagon_react">Injection de glucagon</string>
    <string name="content_glucagon_react">
        Le glucagon est une hormone qui a des effets opposés à ceux de l\'insuline : il élève la
        quantité de glucose (sucre) dans le sang.\n\n
        Au moment d’une hypoglycémie grave (glycémie inférieure à 2,8 mmol par litre et risque
        d’inconscience), on doit injecter du glucagon à la personne diabétique. Il est donc
        important que ses proches sachent comment faire une injection de glucagon.
    </string>
    <string name="title_regime_diabetique">Régime du diabétique</string>
    <string name="intro_regime_diabetique">
        Le contrôle et la surveillance de l\'alimentation sont fondamentaux pour un diabétique.
        L\'alimentation représente un véritable traitement, au même titre que l\'activité physique
        et les médicaments. La surveillance de l\'alimentation permet d\'éviter des modifications
        importantes de la glycémie et de prévenir l\'apparition des complications du diabète
        (cardio-vasculaires, rénales, ophtalmiques…). L\'alimentation conseillée aux diabétiques
        est identique à celle recommandée à la majorité des personnes.
    </string>
    <string name="subtitle_regime_diabetique">Alimentation du diabétique</string>
    <string name="conseil_regime_diabetique">
        Conseils pour adopter une bonne alimentation lorsqu\'on présente un diabète : \n
        ne pas faire de régime sévère, pouvoir manger de tout, avoir une alimentation variée et
        équilibrée, manger en quantité raisonnable, ne pas comptabiliser obsessionnellement les calories
        consommées, prendre l\'avis d\'un nutritionniste ou d\'un diététicien avec l\'accord de son
        diabétologue. Éviter la consommation isolée d\'aliments riches en sucre et respecter à
        chaque repas la proportion des différentes catégories d\'aliments indispensables avec 40 à
        50%% de glucides, 15%% de protéines et 30 à 45%% de lipides.\n
        D\'autre part, ne jamais consommer de morceaux de sucre sauf lorsqu\'une situation
        exceptionnelle le nécessite (hypoglycémie par exemple).
        Respecter les quantités totales de glucides autorisés et contrôler son poids. Chez les
        patients diabétiques de type II, une perte de poids améliore la glycémie.\n
        Le fractionnement des repas est indispensable pour maintenir un bon équilibre de la
        glycémie : effectuer 3 repas principaux ainsi qu\'une ou deux collations, prendre ses repas
        régulièrement, ne pas sauter de repas, manger des légumes et fruits à tous les repas,
        consommer des féculents à chaque repas, celui du midi et du soir, associer légumes et
        féculents, éviter les produits riches en sucre, préférer les viandes maigres, manger du
        poisson au moins 2 ou 3 fois par semaine, consommer des féculents en les répartissant sur la
        journée pour que l\'apport en glucides corresponde aux besoins de l\'organisme et à votre
        activité physique, varier les aliments et faire un vrai petit déjeuner.\n
        Boire de l\'eau en quantité suffisante, éviter les boissons sucrées.
    </string>
    <string name="title_dodge">Trucs et astuces pour ne pas se faire surprendre</string>
    <string name="intro_dodge">
        Ici nous vous proposons certaines astuces pratiques pour ne pas vous faire surprendre par le
        diabète. Ces petites astuces sont tirées des membres de la communauté.
    </string>
    <string name="content_dodge">
        Avant d\'aller se coucher :\n
        - Effectuer sa prise d\'insuline (il est préférable d\'attendre un peu et de contrôler si
        tout s\'est bien passé avant d\'aller se coucher)\n
        Si pompe à insuline :\n
        - Changer son cathéter avant d\'aller se coucher ............. Retour Communauté....
    </string>
</resources>