<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/include">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_toxic"
                android:id="@+id/title"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="bold"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/intro_toxic"
                android:id="@+id/intro"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sub_title1_alco_toxic"
                android:id="@+id/title5"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="bold"
                android:textSize="@dimen/textstyletitle"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/content_alco_toxic"
                android:id="@+id/alcoolcontent"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_conseil_alco_toxic"
                android:id="@+id/title6"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="italic"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/content_conseil_alco_toxic"
                android:id="@+id/alcoolcontent2"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sub_title2_cana_toxic"
                android:id="@+id/title2"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="bold"
                android:textSize="@dimen/textstyletitle"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/noeffect_diabete_toxic"
                android:id="@+id/marijuanacontent"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/content_cana_toxic"
                android:id="@+id/marijuanacontent2"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sub_title3_drug_toxic"
                android:id="@+id/title3"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="bold"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/noeffect_diabete_toxic"
                android:id="@+id/strongdrugscontent"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/content_drug_toxic"
                android:id="@+id/strongdrugscontent2"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/warning_drug_toxic"
                android:id="@+id/strongdrugscontent3"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/consequence_drug_toxic"
                android:id="@+id/strongdrugscontent4"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>