<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/include">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_info"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_react"
                android:id="@+id/title"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="bold"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_hyper_react"
                android:id="@+id/hyper"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="italic"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/recognize_hyper_react"
                android:id="@+id/intro"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_hypo_react"
                android:id="@+id/hypo"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="italic"
                android:textSize="@dimen/textstyletitle"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/content_hypo_react"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_glucagon_react"
                android:id="@+id/glucagon"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="italic"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/content_glucagon_react"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
