<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/include">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_finance"
                android:id="@+id/title"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="bold"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/intro_finance"
                android:id="@+id/intro"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sub_title1_finance"
                android:id="@+id/stitle"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="bold"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/content1_finance"
                android:id="@+id/content2"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sub_title2_finance"
                android:id="@+id/stitle2"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="bold"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/content2_finance"
            android:id="@+id/content3"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_info_height"
                android:text="@string/Button_text"
                android:id="@+id/button"
                android:background="@color/buttoncolor"
                android:onClick="launch_more"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>