<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/include">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_dodge"
                android:id="@+id/title"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="bold"
                android:textSize="@dimen/textstyletitle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/intro_dodge"
                android:id="@+id/hyper"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="italic"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/content_dodge"
                android:id="@+id/intro"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_info_height"
                android:background="@color/colorPrimary"
                android:text="@string/Button_text"
                android:id="@+id/button"
                android:onClick="launch_more"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
