<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/include">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_regime_diabetique"
                android:id="@+id/title"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginbottomtitle"
                android:textStyle="bold"
                android:textSize="@dimen/textstyletitle"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/intro_regime_diabetique"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/content_marginbot"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/subtitle_regime_diabetique"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="30dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/conseil_regime_diabetique"
                android:id="@+id/titre2"
                android:layout_gravity="center"
                android:gravity="center"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>